--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #F4F5F7;
 }
 
 a {
@@ -19,3 +20,5 @@ a {
   box-sizing: border-box;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 }
+
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; width: 100%; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
