--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,11 @@ a {
 
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; width: 100%; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
+
 .h1 {
   @apply text-3xl font-semibold mb-8;
+}
+
+.h1-row > .h1 {
+  margin-bottom: 0 !important
 }
